--- a/playground/props.html
+++ b/playground/props.html
@@ -11,23 +11,32 @@
   <div id="app">
     <!-- <app-header v-bind:프롭스 속성이름='상위컴포넌트 데이터이름'></app-header> -->
     <app-header v-bind:propsdata='message'></app-header>
+    <app-content v-bind:propsdata='number'></app-content>
 
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
   <script>
     let appHeader = {
-      template: '<h1>헤더</h1>',
+      template: '<h1>{{propsdata}}</h1>',
       props:['propsdata']
     }
+    
+    let appContent = {
+      template: '<div>{{propsdata}}</div>',
+      props:['propsdata']
+    }
+
 
     new Vue({
       el: '#app',
       components: {
-        'app-header': appHeader
+        'app-header': appHeader,
+        'app-content': appContent
       },
       data:{
-        message:'hi'
+        message:'hi',
+        number:10
       }
     })
 
