--- a/playground/event-emit.html
+++ b/playground/event-emit.html
@@ -10,7 +10,10 @@
 <body>
   
   <div id="app">
-    <app-header></app-header>
+    <p>{{num}}</p>
+    <!-- <app-header v-on:하위 컴포넌트에서 발생한 이벤트이름='상위컴포넌트 메서드이름'></app-header> -->
+    <app-header v-on:pass='logText'></app-header>
+    <app-content v-on:addnumber='addNumber'></app-content>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -23,10 +26,31 @@
         }
       }
     }
-    new Vue({
+
+    let appContent ={
+      template:'<button v-on:click="addNumber">add</button>',
+      methods:{
+        addNumber:function(){
+          this.$emit('addnumber')
+        }
+      }
+    }
+    const vm = new Vue({
       el: '#app',
       components:{
-        'app-header':appHeader
+        'app-header':appHeader,
+        'app-content':appContent,
+      },
+      methods:{
+        logText:function(){
+          console.log('hi');
+        },
+        addNumber:function(){
+          this.num+=1 
+        }
+      },
+      data:{
+        num:10
       }
     })
   </script>
