--- a/playground/router.html
+++ b/playground/router.html
@@ -29,12 +29,13 @@
     }
 
     let router = new VueRouter({
+      // mode:'history',
       //페이지의 라우팅 정보 
       routes:[
         {
           //페이지 url 
           path:'/login',
-          //해당 url에 표시될 컴포넌트 
+          //해당 url에 표시될 컴포넌트 , 무조건 1개라 s 안붙음 
           component: LoginComponent
         },
         {
