--- a/playground/data-binding.html
+++ b/playground/data-binding.html
@@ -9,8 +9,23 @@
 
 <body>
   <div id="app">
-    <p> {{number}}</p>
+    <!-- <p id='abc1234'> {{number}}</p> -->
+    <p v-bind:id='uuid' v-bind:class='name'> {{number}}</p>
     <p> {{doubleNum}}</p>
+  
+    <div v-if='loading'>
+      Loading...
+    </div>
+  
+    <div v-else>
+      test user has been logged in
+    </div>
+
+    <!-- v-if랑 다르게 dom에는 남아있지만 display:none 만 적용하는 방식 -->
+    <div v-show='loading'> 
+      Loading...
+    </div>
+  
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -20,7 +35,10 @@
     new Vue({
       el: '#app',
       data: {
-        number: 10
+        number: 10,
+        uuid: 'abc1234',
+        name: 'text-blue',
+        loading: true
       },
       computed: {
         doubleNum: function () {
